--- a/PF/css/style.css
+++ b/PF/css/style.css
@@ -36,15 +36,17 @@ a {
 }
 /* header */
 #header {
-}
-
-.header__inner {
   width: 100%;
   height: 110px;
   position: fixed;
   left: 0;
   top: 0;
   background: #ffff;
+  z-index: 3;
+}
+
+.header__inner {
+  width: 1280px;
   z-index: 3;
 }
 
@@ -57,7 +59,7 @@ a {
   letter-spacing: 6px;
 }
 .logo a {
-  padding: 30px;
+  padding: 30px 30px 30px 0;
 }
 .container .menu {
   float: right;
