--- a/web__test/web02/css/style.css
+++ b/web__test/web02/css/style.css
@@ -1,132 +1,126 @@
 @charset "utf-8";
 
 * {
-    margin: 0 auto;
-    padding: 0;
-    color: #333;
-    list-style: none;
-    font-family: "맑은고딕";
-
+  margin: 0 auto;
+  padding: 0;
+  color: #333;
+  list-style: none;
+  font-family: "맑은고딕";
 }
 
 body {
-    width: 1200px;
-    height: 700px;
-    font-size: 20px;
-    background-color: #fff;
+  width: 1200px;
+  height: 700px;
+  font-size: 20px;
+  background-color: #fff;
 }
 
 a {
-    text-decoration: none;
-    display: block;
+  text-decoration: none;
+  display: block;
 }
 
 header {
-    width: 100%;
-    height: 100px;
-
+  width: 100%;
+  height: 100px;
 }
 
 .headerwrap {
-    width: 1200px;
-    height: 100px;
+  width: 1200px;
+  height: 100px;
 }
 
 .logo {
-    width: 200px;
-    height: 100px;
-    float: left;
-
+  width: 200px;
+  height: 100px;
+  float: left;
 }
 
 .logo img {
-    width: 200px;
-    height: 80px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  width: 200px;
+  height: 80px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .menu_bg {
-    width: 1200px;
-    height: 160px;
-    position: absolute;
-    top: 100px;
-    background-color: #fff;
-    z-index: 1;
-    display: none;
+  width: 1200px;
+  height: 160px;
+  position: absolute;
+  top: 100px;
+  background-color: #fff;
+  z-index: 1;
+  display: none;
 }
 
 .menu {
-    width: 800px;
-    height: 100px;
-    z-index: 1;
+  width: 800px;
+  height: 100px;
+  z-index: 1;
 
-    float: right;
-
+  float: right;
 }
 
-.menu>ul {
-    width: 800px;
-    float: right;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-right: 10px;
+.menu > ul {
+  width: 800px;
+  float: right;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-right: 10px;
 }
 
-.menu>ul>li {
-    float: left;
+.menu > ul > li {
+  float: left;
 }
 
-.menu>ul>li>a {
-
-    width: 200px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    font-size: 25px;
-    color: #fff;
-    font-weight: bold;
-    background: rgb(49, 46, 111);
-
+.menu > ul > li > a {
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 25px;
+  color: #fff;
+  font-weight: bold;
+  background: rgb(49, 46, 111);
 }
 
-.menu>ul>li>a:hover {
-    background: rgb(156, 156, 157);
+.menu > ul > li > a:hover {
+  background: rgb(156, 156, 157);
 }
 
 .submenu {
-    width: 200px;
-    height: 160px;
-    background: #fff;
-    position: absolute;
-    z-index: 1;
-    display: none;
-
+  width: 200px;
+  height: 160px;
+  background: #fff;
+  position: absolute;
+  z-index: 1;
+  display: none;
 }
 
-.submenu>li {}
-
-.submenu>li>a {
-    width: 200px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    color: black;
-    background: #fff;
-    font-weight: bold;
+.submenu > li {
 }
 
-.submenu>li>a:hover {
-    background: rgb(156, 156, 157);
+.submenu > li > a {
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: black;
+  background: #fff;
+  font-weight: bold;
+}
+
+.submenu > li > a:hover {
+  background: rgb(156, 156, 157);
 }
 
 .imgslide {
-    width: 1200px;
-    height: 300px;
-    margin-top: 0;
-    position: relative;
-    overflow: hidden;
+  width: 1200px;
+  height: 300px;
+  margin-top: 0;
+  position: relative;
+  overflow: hidden;
 }
 
 /* 좌우 슬라이드 */
@@ -154,283 +148,275 @@ header {
 } */
 
 /* 페이드인페이드아웃 슬라이드 */
-.imgslide>a {
-    display: block;
-    position: absolute;
-
+.imgslide > a {
+  display: block;
+  position: absolute;
 }
 
 .imgslide span {
-    color: #fff;
-    width: 600px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    background-color: rgba(40, 40, 40, 0.5);
-    position: absolute;
-    margin-left: 300px;
-    margin-top: 125px;
+  color: #fff;
+  width: 600px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background-color: rgba(40, 40, 40, 0.5);
+  position: absolute;
+  margin-left: 300px;
+  margin-top: 125px;
 }
-
-
 
 /* contents */
 .contents {
-    width: 1200px;
-    height: 200px;
-    float: left;
-    font-size: 18px;
-    margin-top: 5px;
-
+  width: 1200px;
+  height: 200px;
+  float: left;
+  font-size: 18px;
+  margin-top: 5px;
 }
 
 .tabmenu {
-    width: 400px;
-    height: 200px;
-    float: left;
-    position: relative;
-
+  width: 400px;
+  height: 200px;
+  float: left;
+  position: relative;
 }
 
-.tabmenu>li {
-    float: left;
-    width: 100px;
-    height: 30px;
-    background-color: #ddd;
-    border: 1px solid #ccc;
-    border-bottom: none;
-    border-right: none;
+.tabmenu > li {
+  float: left;
+  width: 100px;
+  height: 30px;
 }
 
-.tabmenu>li:first-child a {
-    background-color: #fff;
-
+.tabmenu > li > a {
+  text-align: center;
+  font-size: 16px;
+  line-height: 30px;
+  background-color: #ddd;
+  border: 1px solid #ccc;
+  border-bottom: none;
+}
+.tabmenu > li:first-child a {
+  border-right: none;
 }
 
-.tabmenu>li.active>a {
-    background-color: #fff;
+.tabmenu > li.active > a {
+  background-color: #fff;
 }
-
-.tabmenu>li>a {
-    text-align: center;
-    font-size: 16px;
-    line-height: 30px;
+/* 높이0  갤러리와노티스박스*/
+.tabmenu > li div {
+  position: absolute;
+  left: 0;
+  height: 0;
+  overflow: hidden;
 }
-
-.notice {
-    width: 400px;
-    height: 160px;
-    position: absolute;
-    top: 30px;
-    left: 0;
-    border: 1px solid #ccc;
+.tabmenu > li.active div {
+  width: 398px;
+  height: 163px;
+  border: 1px solid #ccc;
 }
 
 .notice li {
-    width: 380px;
-    height: 40px;
+  width: 380px;
+  height: 40px;
+}
+.notice li:nth-child(2n) {
+  background-color: #ddd;
 }
 
 .notice li a {
-    font-size: 16px;
-    line-height: 40px;
-
+  font-size: 16px;
+  line-height: 40px;
 }
 
 .notice span {
-    float: right;
+  float: right;
 }
 
 .notice li a:hover {
-    font-weight: bold;
-}
-
-.notice li:nth-child(2n) {
-    background-color: rgb(238, 236, 236);
+  font-weight: bold;
 }
 
 .gallery {
-    width: 400px;
-    position: absolute;
-    top: 0;
-    left: 0;
+  width: 400px;
+  position: absolute;
+  top: 30px;
+  left: 0;
 }
 
 .gallery ul {
-    width: 400px;
-    margin-left: 20px;
-    margin-top: 60px;
+  width: 400px;
+  margin-left: 5px;
 }
 
 .gallery li {
-    float: left;
-    width: 33.3%;
-
+  float: left;
+  width: 33.3%;
+  margin-top: 20px;
 }
 
-.gallery li a {}
-
+.gallery img {
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+}
+.gallery img:hover {
+  opacity: 0.5;
+}
 .others {
-    width: 800px;
-    height: 200px;
-    float: right;
+  width: 800px;
+  height: 200px;
+  float: right;
 }
 
 .banner {
-    width: 400px;
-    height: 200px;
-    float: left;
-    position: relative;
-
+  width: 400px;
+  height: 200px;
+  float: left;
+  position: relative;
 }
 
 .banner:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .banner span {
-    color: #fff;
-    width: 100px;
-    height: 50px;
-    line-height: 50px;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-    text-align: center;
-    background-color: rgba(40, 40, 40, 0.5);
+  color: #fff;
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  text-align: center;
+  background-color: rgba(40, 40, 40, 0.5);
 }
 
 .banner img {
-    width: 395px;
-    height: 185px;
-    padding: 5px 0 5px 5px;
+  width: 395px;
+  height: 185px;
+  padding: 5px 0 5px 5px;
 }
 
 .shortcut {
-    width: 400px;
-    height: 200px;
-    float: right;
-    position: relative;
-
+  width: 400px;
+  height: 200px;
+  float: right;
+  position: relative;
 }
 
 .shortcut:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .shortcut span {
-    color: #fff;
-    width: 100px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-    background-color: rgba(40, 40, 40, 0.5);
+  color: #fff;
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  background-color: rgba(40, 40, 40, 0.5);
 }
 
 .shortcut img {
-    width: 395px;
-    height: 185px;
-    padding: 5px 0 5px 5px;
-
+  width: 395px;
+  height: 185px;
+  padding: 5px 0 5px 5px;
 }
 
 /* modal */
 .modal_bg {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    display: none;
-
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: none;
 }
 
 .modal_layer {
-    width: 500px;
-    height: 500px;
-    background-color: #fff;
-    position: absolute;
-    top: 30%;
-    left: 40%;
-    z-index: 2;
-
-
+  width: 500px;
+  height: 500px;
+  background-color: #fff;
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  z-index: 2;
 }
 
 .layer_tit {
-    color: black;
-    text-align: center;
-    text-align: center;
-    margin-top: 80px;
-    margin-bottom: 30px;
-    font-weight: bold;
+  color: black;
+  text-align: center;
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  font-weight: bold;
 }
 
 .layer_body {
-    color: black;
-    text-align: center;
-    text-align: center;
-    padding: 30px;
+  color: black;
+  text-align: center;
+  text-align: center;
+  padding: 30px;
 }
 
 .btn {
-    color: black;
-    background-color: #ddd;
-    width: 80px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    cursor: pointer;
-    position: absolute;
-    right: 30px;
-    bottom: 30px;
-
+  color: black;
+  background-color: #ddd;
+  width: 80px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
 }
 
 footer {
-    width: 100%;
-    height: 100px;
-    clear: both;
-    background-color: rgb(127, 193, 239);
+  width: 100%;
+  height: 100px;
+  clear: both;
+  background-color: rgb(127, 193, 239);
 }
 
 .btlogo {
-    width: 200px;
-    height: 100px;
-    float: left;
-
+  width: 200px;
+  height: 100px;
+  float: left;
 }
 
 .btlogo img {
-    width: 150px;
-    height: 60px;
-    margin: 20px;
+  width: 150px;
+  height: 60px;
+  margin: 20px;
 }
 
 .stie {
-    width: 1000px;
-    height: 100px;
-    float: right;
+  width: 1000px;
+  height: 100px;
+  float: right;
 }
 
 .btmenu {
-    width: 1000px;
-    height: 50px;
-    line-height: 50px;
-    float: left;
-    text-align: center;
+  width: 1000px;
+  height: 50px;
+  line-height: 50px;
+  float: left;
+  text-align: center;
 }
 
+.btmenu ul li {
+  display: inline-block;
+}
 .copy {
-    width: 1000px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    float: left;
-
+  width: 1000px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  float: left;
 }
