--- a/web__test/web07/css/style.css
+++ b/web__test/web07/css/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 * {
   margin: 0 auto;
   padding: 0;
@@ -6,26 +7,31 @@
   color: #333;
   font-family: "맑은 고딕";
 }
+
 body {
   width: 1000px;
   background-color: #fff;
   font-size: 20px;
 }
+
 a {
   text-decoration: none;
   display: block;
   /* 박스속성들이 블럭요소가 되도록 앞뒤줄바꿈이 자동으로 */
 }
+
 /* header */
 header {
   float: left;
   position: absolute;
 }
+
 .top {
   width: 200px;
   height: 650px;
   float: left;
 }
+
 .logo {
   float: left;
   width: 200px;
@@ -34,7 +40,9 @@ header {
   margin-top: 30px;
   text-align: center;
 }
-.menu {
+
+/* 옆에서 내려가는 메뉴 */
+/* .menu {
   width: 180px;
   top: 100px;
   left: 10px;
@@ -85,6 +93,57 @@ header {
 }
 .submenu > li > a:hover {
   background-color: #fff;
+} */
+
+
+/* 아래로내려가는 메뉴 */
+.menu {
+  width: 180px;
+  top: 100px;
+  text-align: center;
+}
+
+.navi>li {
+  width: 180px;
+  float: left;
+}
+
+.navi>li>a {
+  height: 40px;
+  line-height: 40px;
+  width: 180px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background-color: rgb(101, 49, 111);
+}
+
+.navi>li>a:hover {
+  background-color: rgb(227, 160, 252);
+}
+
+.submenu {
+  width: 180px;
+  text-align: center;
+}
+
+.submenu>li {
+  width: 180px;
+  float: left;
+}
+
+.submenu>li>a {
+  height: 40px;
+  line-height: 40px;
+  width: 180px;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(101, 49, 111);
+  background-color: #fff;
+}
+
+.submenu>li>a:hover {
+  background-color: rgb(227, 160, 252);
 }
 
 /* bodywrap */
@@ -93,21 +152,25 @@ header {
   width: 800px;
   height: 550px;
 }
-.imgslide {
+
+/* 슬라이드좌우 */
+/* .imgslide {
   float: right;
   width: 800px;
   height: 350px;
   position: relative;
   overflow: hidden;
 }
+
 .slidelist {
   width: 2400px;
 }
+
 .slidelist ul li {
   width: 800px;
   float: left;
-}
-.slidelist span {
+} */
+/* .slidelist span {
   width: 300px;
   height: 50px;
   line-height: 50px;
@@ -117,12 +180,74 @@ header {
   text-align: center;
   background-color: rgba(100, 100, 100, 0.5);
   color: #fff;
+} */
+
+/*슬라이드 상하  */
+/* .imgslide {
+  float: right;
+  width: 800px;
+  height: 350px;
+  position: relative;
+  overflow: hidden;
 }
+
+.slidelist {
+  height: 1050px;
+}
+
+.slidelist ul li {
+  height: 350px;
+  float: left;
+} */
+/* .slidelist span {
+  width: 300px;
+  height: 50px;
+  line-height: 50px;
+  position: absolute;
+  margin-left: 250px;
+  margin-top: 150px;
+  text-align: center;
+  background-color: rgba(100, 100, 100, 0.5);
+  color: #fff;
+} */
+
+/* 페이드인 페이드아웃 슬라이드 */
+.imgslide {
+  float: right;
+  width: 800px;
+  height: 350px;
+  position: relative;
+  overflow: hidden;
+}
+
+.imgslide>a {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+
+}
+
+/* span 위치%로 */
+.imgslide span {
+  width: 300px;
+  height: 50px;
+  line-height: 50px;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  text-align: center;
+  background-color: rgba(100, 100, 100, 0.5);
+  color: #fff;
+}
+
+
 .contents {
   float: left;
   width: 800px;
   height: 200px;
 }
+
 .tabmenu {
   float: left;
   width: 290px;
@@ -132,12 +257,14 @@ header {
   margin-left: 5px;
   position: relative;
 }
-.tabmenu > li {
+
+.tabmenu>li {
   float: left;
   width: 80px;
   line-height: 30px;
 }
-.tabmenu > li > a {
+
+.tabmenu>li>a {
   display: block;
   font-size: 14px;
   text-align: center;
@@ -145,36 +272,44 @@ header {
   border: 1px solid #ddd;
   border-bottom: none;
 }
-.tabmenu > li > a:hover {
+
+.tabmenu>li>a:hover {
   background-color: #eee;
 }
-.tabmenu > li:first-child a {
+
+.tabmenu>li:first-child a {
   border-right: none;
 }
-.tabmenu > li.active > a {
+
+.tabmenu>li.active>a {
   background-color: #fff;
 }
-.tabmenu > li div {
+
+.tabmenu>li div {
   position: absolute;
   left: 0;
   height: 0;
   overflow: hidden;
 }
-.tabmenu > li.active div {
+
+.tabmenu>li.active div {
   width: 288px;
   height: 148px;
   border: 1px solid #ddd;
   z-index: 1;
 }
+
 .notice {
   float: left;
 }
+
 .notice ul {
   float: left;
   width: 288px;
   margin-top: 12px;
   margin-bottom: 12px;
 }
+
 .notice ul li {
   height: 32px;
   line-height: 32px;
@@ -182,42 +317,52 @@ header {
   margin-left: 10px;
   margin-right: 10px;
 }
+
 .notice ul li:hover {
   font-weight: bold;
 }
+
 .notice ul li:nth-child(2n) {
   background-color: #ccc;
 }
+
 .notice span {
   float: right;
 }
+
 .gallery {
   float: left;
 }
+
 .gallery li {
   float: left;
   margin-top: 20px;
   margin-left: 4.5px;
 }
+
 .gallery li:hover {
   opacity: 0.5;
 }
+
 .gallery img {
   padding: 10px;
   width: 70px;
   height: 90px;
 }
+
 .otherwrap {
   float: right;
   width: 500px;
   height: 200px;
 }
+
 .banner {
   float: left;
   width: 300px;
   height: 200px;
   position: relative;
 }
+
 .banner img {
   width: 300px;
   height: 180px;
@@ -225,9 +370,11 @@ header {
   margin-right: 10px;
   margin-left: 5px;
 }
+
 .banner img:hover {
   opacity: 0.5;
 }
+
 .bntext {
   position: absolute;
   top: 45%;
@@ -239,21 +386,25 @@ header {
   background-color: rgba(255, 251, 251, 0.3);
   text-align: center;
 }
+
 .shortcut {
   float: right;
   width: 200px;
   height: 200px;
   position: relative;
 }
+
 .shortcut img {
   width: 185px;
   height: 180px;
   margin-top: 10px;
   margin-left: 15px;
 }
+
 .shortcut img:hover {
   opacity: 0.5;
 }
+
 .sctext {
   position: absolute;
   top: 45%;
@@ -276,9 +427,11 @@ header {
   background: rgba(0, 0, 0, 0.6);
   display: none;
 }
+
 .modal.active {
   display: block;
 }
+
 .modal_up {
   width: 400px;
   height: 400px;
@@ -287,6 +440,7 @@ header {
   position: relative;
   top: 100px;
 }
+
 .uptitle {
   margin-top: 50px;
   margin-bottom: 30px;
@@ -297,6 +451,7 @@ header {
   margin-bottom: 30px;
   line-height: 30px;
 }
+
 .btn {
   position: absolute;
   right: 30px;
@@ -314,26 +469,31 @@ footer {
   height: 100px;
   float: right;
 }
+
 .bottom {
   float: left;
   width: 800px;
   height: 100px;
   background-color: #ccc;
 }
+
 .btlogo {
   float: left;
   width: 200px;
   height: 100px;
 }
+
 .site {
   float: right;
   width: 600px;
   height: 100px;
 }
+
 .btmenu {
   width: 600px;
   height: 50px;
 }
+
 .copy {
   width: 600px;
   height: 50px;
